<<<<<<< HEAD

@startuml
'https://plantuml.com/class-diagram



class Room{
roomID: Long PK
roomName: String

}

class SeatOrder{
seatOrderID: Long PK
}

class Class{
classID: Long PK
className: String
seatOrderID: Long FK
timeTableID: Long FK
}

class Student{
personID: Person PK FK
classID: Long FK
}

class Teacher{
personID: Person PK FK
classID: Long FK
}

class Absent{
absentID: Long
studentID Long
timeStart: LocalDateTime
timeEnd: LocalDateTime
lessonTime: Long
}


class TimeTable{
timeTableID: Long PK
day: Long
lessonTime: Long
personID: Long FK
subjectID: Long FK
seatOrderID: Long FK
}

class Subject{
subjectID: Long PK
name: String

}

class Table {
tableId: Long PK
row: Int PK
column: Int PK
roomId: Long FK
}

class StudentTable {
    seatOrderID: Long PK FK
    studentID: Long PK FK
    tableId: Long FK
}

Abstract Class Person{
firstName: String
lastName: String
personID: Long
}

Person *.. Student : inherit
Person *.. Teacher : inherit
TimeTable ||..|{ Subject : 1 : n
Student }|..|| Class : n : 1
TimeTable ||..|{ Class : 1 : n
TimeTable }|..|| Room : n : 1
Student ||..|{ Absent: 1 : n
Table }|..|| Room : n : 1
StudentTable }|..|| SeatOrder: n : 1
Table ||..|{ StudentTable : 1 : n
StudentTable }|..|| Student : n : 1
Teacher ||..|{ TimeTable : 1 : n
SeatOrder ||..|{ TimeTable : 1 : n


=======
@startuml
'https://plantuml.com/class-diagram



class Room{
roomID: Long PK
roomName: String

}

class SeatOrder{
seatOrderID: Long PK
roomID: Long FK
}

class Class{
classID: Long PK
className: String
seatOrderID: Long FK
timeTableID: Long FK
}

class Student{
personID: Person PK FK
classID: Long FK
}

class Teacher{
personID: Person PK FK
classID: Long FK
}

class Absent{
absentID: Long
studentID Long
timeStart: LocalDateTime
timeEnd: LocalDateTime
lessonTime: Long
}


class TimeTable{
timeTableID: Long PK
personID: Long FK
subjectID: Long FK
day: Long
lessonTime: Long
}

class Subject{
subjectID: Long PK
name: String

}

class Table {
tableId: Long PK
row: Int
column: Int
}

Abstract Class Person{
firstName: String
lastName: String
personID: Long
}

Person *.. Student : inherit
Person *.. Teacher : inherit
TimeTable ||..|{ Subject : 1 : n
Student }|..|| Class : n : 1
TimeTable ||..|{ Class : 1 : n
Student ||..|{ Absent: 1 : n
SeatOrder }|..|| Room : n : 1
Table }|..|| SeatOrder : n : 1
Table ||..|{ Student : 1 : n
Teacher ||..|{ TimeTable : 1 : n
SeatOrder ||..|{ TimeTable : 1 : n


>>>>>>> f32e957ff966e0b59009ed3d71fc22f97f4b8900
@enduml
